--- a/src/main/resources/assets/betterquesting/lang/zh_CN.lang
+++ b/src/main/resources/assets/betterquesting/lang/zh_CN.lang
@@ -126,6 +126,7 @@ item.betterquesting.extra_life.quarter.name=1/4颗心
 item.betterquesting.guide.name=入门指南
 
 tile.betterquesting.submit_station.name=提交站(OSS)
+tile.betterquesting.observation_station.name=观测站(OOS)
 
 betterquesting.btn.help1=导航
 betterquesting.btn.help2=OSS方块
@@ -226,4 +227,3 @@ jdoc.betterquesting.quest.properties.desc=定义任务外观和功能的属性
 
 jdoc.betterquesting.quest.properties.betterquesting.name=更好的任务(BetterQuesting)
 jdoc.betterquesting.quest.properties.betterquesting.desc=属性
-
