Update lang file handling
Lang file is no longer generated by default, and format matches what is generated by the workflow.

--- a/src/main/resources/assets/betterquesting/lang/en_US.lang
+++ b/src/main/resources/assets/betterquesting/lang/en_US.lang
@@ -198,6 +198,8 @@ betterquesting.cmd.default.save2=Quest database saved to %s
 betterquesting.cmd.default.load=Reloaded default quest database
 betterquesting.cmd.default.load2=Loaded quest database from %s
 betterquesting.cmd.default.set=Set %s as the default quest database
+betterquesting.cmd.default.exportlang=Exported template.lang to default
+betterquesting.cmd.default.exportlang2=Exported template.lang to %s
 betterquesting.cmd.default.none=Quest database not found
 betterquesting.cmd.delete.single=Deleted quest %s
 betterquesting.cmd.delete.all=Deleted all quests
