add monochrome color toggle

--- a/src/main/resources/assets/betterquesting/lang/en_US.lang
+++ b/src/main/resources/assets/betterquesting/lang/en_US.lang
@@ -66,6 +66,7 @@ betterquesting.btn.bookmark_quest=Bookmark
 betterquesting.btn.unbookmark_quest=Unbookmark
 betterquesting.btn.share_quest=Share to Chat
 betterquesting.btn.copy_quest=Copy Quest ID
+betterquesting.btn.force_monochrome=Show Quest Colors
 
 betterquesting.home.exit=Exit
 betterquesting.home.quests=Quests
